Changed the landing page to something more apt

--- a/about/index.html
+++ b/about/index.html
@@ -4077,7 +4077,7 @@
                                   id="menu-item-1172"
                                   class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1172"
                                 >
-                                  <a href="https://ramendratripathi.github.io/downloads/RamendraResume.pdf" class="menu-link" target="_blank">Resume/CV</a>
+                                  <a href="../downloads/RamendraResume.pdf" class="menu-link" target="_blank">Resume/CV</a>
                                 </li>
                               </ul>
                             </div>
@@ -4208,7 +4208,7 @@
                           class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1172"
                         >
                           <a
-                            href="https://ramendratripathi.github.io/downloads/RamendraResume.pdf"
+                            href="../downloads/RamendraResume.pdf"
                             class="menu-link"
                             >Resume/CV</a
                           >
