--- a/home/four-moons-tales-of-occi/index.html
+++ b/home/four-moons-tales-of-occi/index.html
@@ -3996,7 +3996,7 @@
                                   class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1172"
                                 >
                                   <a
-                                    href="https://ramendratripathi.github.io/downloads/RamendraResume.pdf"
+                                    href="../downloads/RamendraResume.pdf"
                                     class="menu-link"
                                     >Resume/CV</a
                                   >
@@ -4132,7 +4132,7 @@
                           class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1172"
                         >
                           <a
-                            href="https://ramendratripathi.github.io/downloads/RamendraResume.pdf"
+                            href="../downloads/RamendraResume.pdf"
                             class="menu-link"
                             >Resume/CV</a
                           >
