--- a/home/the-guernica-engine/index.html
+++ b/home/the-guernica-engine/index.html
@@ -4006,7 +4006,7 @@
                                   class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1172"
                                 >
                                   <a
-                                    href="https://ramendratripathi.github.io/downloads/RamendraResume.pdf"
+                                    href="../downloads/RamendraResume.pdf"
                                     class="menu-link"
                                     >Resume/CV</a
                                   >
@@ -4142,7 +4142,7 @@
                           class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1172"
                         >
                           <a
-                            href="https://ramendratripathi.github.io/downloads/RamendraResume.pdf"
+                            href="../downloads/RamendraResume.pdf"
                             class="menu-link"
                             >Resume/CV</a
                           >
