--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
+	<!-- Add Bootstrap CSS -->
+<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 	 <link rel="profile" href="https://gmpg.org/xfn/11"> 
@@ -12,6 +14,7 @@
     animation: none !important;
     transition: none !important;
 } */
+ /* deploy */
 					.custom-link-fade {
 						color: whitesmoke !important;
 						font-weight: bold !important;
@@ -222,7 +225,7 @@ flexibility(document.documentElement);
 			<div class="ast-main-header-bar-alignment"><div class="main-header-bar-navigation"><nav class="site-navigation ast-flex-grow-1 navigation-accessibility site-header-focus-item" id="primary-site-navigation-desktop" aria-label="Site Navigation: Navigation" itemtype="https://schema.org/SiteNavigationElement" itemscope="itemscope"><div class="main-navigation ast-inline-flex"><ul id="ast-hf-menu-1" class="main-header-menu ast-menu-shadow ast-nav-menu ast-flex  submenu-with-border astra-menu-animation-slide-down  stack-on-mobile"><li id="menu-item-44" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-213 current_page_item menu-item-44"><a href="" aria-current="page" class="menu-link">My Work</a></li>
 <li id="menu-item-1779" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1779"><a href="writing-samples/index.html" class="menu-link">Writing Samples</a></li>
 <li id="menu-item-1171" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1171"><a href="about/index.html" class="menu-link">About</a></li>
-<li id="menu-item-1172" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1172"><a href="https://ramendratripathi.github.io/downloads/RamendraResume.pdf" class="menu-link" target="_blank">Resume/CV</a></li>
+<li id="menu-item-1172" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1172"><a href="downloads/RamendraResume.pdf" class="menu-link" target="_blank">Resume/CV</a></li>
 </ul></div></nav></div></div>		</div>
 									</div>
 																		</div>
@@ -259,7 +262,7 @@ flexibility(document.documentElement);
 			<div class="ast-main-header-bar-alignment"><div class="main-header-bar-navigation"><nav class="site-navigation ast-flex-grow-1 navigation-accessibility site-header-focus-item" id="primary-site-navigation-mobile" aria-label="Site Navigation: Navigation" itemtype="https://schema.org/SiteNavigationElement" itemscope="itemscope"><div class="main-navigation ast-inline-flex"><ul id="ast-hf-menu-1" class="main-header-menu ast-menu-shadow ast-nav-menu ast-flex  submenu-with-border astra-menu-animation-slide-down  stack-on-mobile"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-213 current_page_item menu-item-44"><a href="" aria-current="page" class="menu-link">My Work</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1779"><a href="writing-samples/index.html" class="menu-link">Writing Samples</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1171"><a href="about/index.html" class="menu-link">About</a></li>
-<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1172"><a href="https://ramendratripathi.github.io/downloads/RamendraResume.pdf" class="menu-link" target="_blank">Resume/CV</a></li>
+<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1172"><a href="downloads/RamendraResume.pdf" class="menu-link" target="_blank">Resume/CV</a></li>
 </ul></div></nav></div></div>		</div>
 					</div>
 			</div>
@@ -307,11 +310,11 @@ flexibility(document.documentElement);
 					</style>
 				</div>
 			</div>
-			<div class="elementor-element elementor-element-0dcca11 elementor-widget elementor-widget-heading" data-id="0dcca11" data-element_type="widget" data-widget_type="heading.default">
+			<!-- <div class="elementor-element elementor-element-0dcca11 elementor-widget elementor-widget-heading" data-id="0dcca11" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
 					<h2 class="elementor-heading-title elementor-size-default">Narrative Designer | &#2357;&#2352;&#2381;&#2339;&#2367;&#2344;&#2381; | Writer</h2>
 				</div>
-			</div>
+			</div> -->
 			<style>
 				.mail-custo-desktop {
 					display: block;
@@ -330,26 +333,12 @@ flexibility(document.documentElement);
 					}
 				}
 			</style>
-			<div class="elementor-element elementor-element-57b61d7 elementor-widget elementor-widget-heading" data-id="57b61d7" data-element_type="widget" data-widget_type="heading.default">
+			<!-- <div class="elementor-element elementor-element-9db2d2e elementor-view-default elementor-widget elementor-widget-icon" data-id="9db2d2e" data-element_type="widget" data-widget_type="icon.default">
 				<div class="elementor-widget-container">
-					<!-- Desktop: Show email -->
-					<i class="mail-custo-desktop">
-						<h4 class="elementor-heading-title elementor-size-default" style="margin-top: 45px; opacity: 0.62;">
-							<a href="mailto:ramendra.x.tripathi@gmail.com" class="custom-link-email-fade">ramendra.x.tripathi@gmail.com</a>
-						</h4>
-					</i>
-					<!-- Mobile: Show Contact Me -->
-					 <div class="mail-custo-mobile"> 
-					<a href="mailto:mailto:ramendra.x.tripathi@gmail.com" aria-label="Email" style="--color: #ea4335 !important; --background-color: transparent;" class="ast-builder-social-element ast-inline-flex ast-email footer-social-item"><span class="ahfb-svg-iconset ast-inline-flex svg-baseline"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24"> <title id="email"> Email </title> <path d="M0 3v18h24v-18h-24zm6.623 7.929l-4.623 5.712v-9.458l4.623 3.746zm-4.141-5.929h19.035l-9.517 7.713-9.518-7.713zm5.694 7.188l3.824 3.099 3.83-3.104 5.612 6.817h-18.779l5.513-6.812zm9.208-1.264l4.616-3.741v9.348l-4.616-5.607z"></path></svg></span></a>
-					</div>
-				</div>
-			</div>
-			<div class="elementor-element elementor-element-9db2d2e elementor-view-default elementor-widget elementor-widget-icon" data-id="9db2d2e" data-element_type="widget" data-widget_type="icon.default">
-				<div class="elementor-widget-container">
-					<!-- <div class="elementor-icon-wrapper">
+					<div class="elementor-icon-wrapper">
 						<a class="elementor-icon elementor-animation-sink" href="#professionalwork">
 						<svg aria-hidden="true" class="e-font-icon-svg e-fas-chevron-down" viewbox="0 0 448 512" xmlns="http://www.w3.org/2000/svg"><path d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"></path></svg>			</a>
-					</div> -->
+					</div> 
 					<div style="height: 20px;"></div>
 					<div class="elementor-element elementor-element-custom-gold-heading elementor-widget elementor-widget-heading" data-id="custom-gold-heading" data-element_type="widget" data-widget_type="heading.default" style="margin-right: 0px; opacity: 0.62;">
 						<div class="elementor-widget-container custom-nav-links">
@@ -367,19 +356,7 @@ flexibility(document.documentElement);
 						</div>
 					</div>
 				</div>
-			</div>
-			<div class="elementor-element elementor-element-b20e871 elementor-widget elementor-widget-spacer" data-id="b20e871" data-element_type="widget" data-widget_type="spacer.default">
-				<div class="elementor-widget-container">
-					<div class="elementor-spacer">
-						<div class="elementor-spacer-inner"></div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="elementor-element elementor-element-97e872e e-flex e-con-boxed e-con e-parent" data-id="97e872e" data-element_type="container">
-					<div class="e-con-inner">
-					</div>
-				</div>
+			</div> -->
 		<div class="elementor-element elementor-element-2a85a82 e-flex e-con-boxed e-con e-parent" data-id="2a85a82" data-element_type="container" id="professionalwork">
 					<div class="e-con-inner">
 				<div class="elementor-element elementor-element-d3a9a8c elementor-widget elementor-widget-heading" data-id="d3a9a8c" data-element_type="widget" data-widget_type="heading.default">
