--- a/writing-samples/index.html
+++ b/writing-samples/index.html
@@ -148,7 +148,7 @@ flexibility(document.documentElement);
 			<div class="ast-main-header-bar-alignment"><div class="main-header-bar-navigation"><nav class="site-navigation ast-flex-grow-1 navigation-accessibility site-header-focus-item" id="primary-site-navigation-desktop" aria-label="Site Navigation: Navigation" itemtype="https://schema.org/SiteNavigationElement" itemscope="itemscope"><div class="main-navigation ast-inline-flex"><ul id="ast-hf-menu-1" class="main-header-menu ast-menu-shadow ast-nav-menu ast-flex  submenu-with-border astra-menu-animation-slide-down  stack-on-mobile"><li id="menu-item-44" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-44"><a href="../index.html" class="menu-link">My Work</a></li>
 <li id="menu-item-1779" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-1722 current_page_item menu-item-1779"><a href="" aria-current="page" class="menu-link">Writing Samples</a></li>
 <li id="menu-item-1171" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1171"><a href="../about/index.html" class="menu-link">About</a></li>
-<li id="menu-item-1172" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1172"><a href="https://ramendratripathi.github.io/downloads/RamendraResume.pdf" class="menu-link" target="_blank">Resume/CV</a></li>
+<li id="menu-item-1172" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1172"><a href="../downloads/RamendraResume.pdf" class="menu-link" target="_blank">Resume/CV</a></li>
 </ul></div></nav></div></div>		</div>
 									</div>
 																		</div>
@@ -185,7 +185,7 @@ flexibility(document.documentElement);
 			<div class="ast-main-header-bar-alignment"><div class="main-header-bar-navigation"><nav class="site-navigation ast-flex-grow-1 navigation-accessibility site-header-focus-item" id="primary-site-navigation-mobile" aria-label="Site Navigation: Navigation" itemtype="https://schema.org/SiteNavigationElement" itemscope="itemscope"><div class="main-navigation ast-inline-flex"><ul id="ast-hf-menu-1" class="main-header-menu ast-menu-shadow ast-nav-menu ast-flex  submenu-with-border astra-menu-animation-slide-down  stack-on-mobile"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-44"><a href="../index.html" class="menu-link">My Work</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-1722 current_page_item menu-item-1779"><a href="" aria-current="page" class="menu-link">Writing Samples</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1171"><a href="../about/index.html" class="menu-link">About</a></li>
-<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1172"><a href="https://ramendratripathi.github.io/downloads/RamendraResume.pdf" class="menu-link" target="_blank">Resume/CV</a></li>
+<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1172"><a href="../downloads/RamendraResume.pdf" class="menu-link" target="_blank">Resume/CV</a></li>
 </ul></div></nav></div></div>		</div>
 					</div>
 			</div>
@@ -244,7 +244,7 @@ flexibility(document.documentElement);
 
 					</div>
 
-					<div id="elementor-tab-content-2271" class="elementor-tab-content elementor-clearfix" data-tab="1" role="region" aria-labelledby="elementor-tab-title-2271"><h4><span style="text-decoration: underline; color: #00ffff;"><a style="color: #00ffff;" href="https://drive.google.com/file/d/1j4ICIByoB6CyT45p01JwXLcestd8vKh5/view?usp=share_link" target="_blank" rel="noopener">Into the Storm</a></span></h4><p><b>Genre &ndash; </b>SciFi, Drama, Dystopia<br><b>Description &ndash; </b>A short excerpt about regret, and a longing for the past.</p><h4><br><a href="https://drive.google.com/file/d/14K2KZqs_SfsXSGp5IIX59FEFthkKCyLT/view?usp=share_link" target="_blank" rel="noopener"><span style="text-decoration: underline;"><span style="color: #00ffff; text-decoration: underline;">King&rsquo;s Court</span></span></a></h4><p><b>Genre &ndash; </b>Fantasy, Drama, Mystery<br><b>Description &ndash; </b>A short excerpt about a dying king and an ominous message.</p></div>
+					<div id="elementor-tab-content-2271" class="elementor-tab-content elementor-clearfix" data-tab="1" role="region" aria-labelledby="elementor-tab-title-2271"><h4><span style="text-decoration: underline; color: #00ffff;"><a style="color: #00ffff;" href="../downloads/Writing%20Samples/Prose/Into%20the%20Storm%20(Sample%20Prose).pdf" target="_blank" rel="noopener">Into the Storm</a></span></h4><p><b>Genre &ndash; </b>SciFi, Drama, Dystopia<br><b>Description &ndash; </b>A short excerpt about regret, and a longing for the past.</p><h4><br><a href="../downloads/Writing%20Samples/Prose/King%E2%80%99s%20Court%20(Sample%20Prose).pdf" target="_blank" rel="noopener"><span style="text-decoration: underline;"><span style="color: #00ffff; text-decoration: underline;">King&rsquo;s Court</span></span></a></h4><p><b>Genre &ndash; </b>Fantasy, Drama, Mystery<br><b>Description &ndash; </b>A short excerpt about a dying king and an ominous message.</p></div>
 				</div>
 							<div class="elementor-toggle-item">
 					<div id="elementor-tab-title-2272" class="elementor-tab-title" data-tab="2" role="button" aria-controls="elementor-tab-content-2272" aria-expanded="false">
@@ -350,9 +350,10 @@ flexibility(document.documentElement);
 												<a class="elementor-toggle-title" tabindex="0">Prose</a>
 					</div>
 
-					<div id="elementor-tab-content-1461" class="elementor-tab-content elementor-clearfix" data-tab="1" role="region" aria-labelledby="elementor-tab-title-1461"><h4><span style="text-decoration: underline; color: #00ffff;"><a style="color: #00ffff;" href="https://drive.google.com/file/d/1j4ICIByoB6CyT45p01JwXLcestd8vKh5/view?usp=share_link" target="_blank" rel="noopener">Into the Storm</a></span></h4><p><b>Genre &ndash; </b>SciFi, Drama, Dystopia<br><b>Description &ndash; </b>A short excerpt about regret, and a longing for the past.</p><h4>
+					<div id="elementor-tab-content-1461" class="elementor-tab-content elementor-clearfix" data-tab="1" role="region" aria-labelledby="elementor-tab-title-1461"><h4><span style="text-decoration: underline; color: #00ffff;"><a style="color: #00ffff;" href="../downloads/Writing%20Samples/Prose/Into%20the%20Storm%20(Sample%20Prose).pdf
+" target="_blank" rel="noopener">Into the Storm</a></span></h4><p><b>Genre &ndash; </b>SciFi, Drama, Dystopia<br><b>Description &ndash; </b>A short excerpt about regret, and a longing for the past.</p><h4>
 						<br>
-						<a href="https://drive.google.com/file/d/14K2KZqs_SfsXSGp5IIX59FEFthkKCyLT/view?usp=share_link" target="_blank" rel="noopener"><span style="text-decoration: underline;"><span style="color: #00ffff; text-decoration: underline;">King&rsquo;s Court</span></span></a></h4><p><b>Genre &ndash; </b>Fantasy, Drama, Mystery<br><b>Description &ndash; </b>A short excerpt about a dying king and an ominous message.</p></div>
+						<a href="../downloads/Writing%20Samples/Prose/King%E2%80%99s%20Court%20(Sample%20Prose).pdf" target="_blank" rel="noopener"><span style="text-decoration: underline;"><span style="color: #00ffff; text-decoration: underline;">King&rsquo;s Court</span></span></a></h4><p><b>Genre &ndash; </b>Fantasy, Drama, Mystery<br><b>Description &ndash; </b>A short excerpt about a dying king and an ominous message.</p></div>
 				</div>
 							<div class="elementor-toggle-item">
 					<div id="elementor-tab-title-1462" class="elementor-tab-title" data-tab="2" role="button" aria-controls="elementor-tab-content-1462" aria-expanded="false">
