Added one  pagers

--- a/writing-samples/index.html
+++ b/writing-samples/index.html
@@ -263,7 +263,7 @@ flexibility(document.documentElement);
 								</span>
 							</a>
 						</h4>
-						<p><b>Genre &ndash; </b>Slice of Life, Sci-Fi<br><b>Description &ndash; </b>A tender, bittersweet drama about two friends sharing chocolate, memories, and fears of the future.</p>
+						<p><b>Genre &ndash; </b>Slice of Life, Sci-Fi<br><b>Description &ndash; </b>A tender, bittersweet drama about two friends sharing chocolate, memories, and their fears of the future.</p>
 						<br>
 						<h4>
 							<a href="../downloads/Writing Samples/Script/damoclesrain_sample_script.pdf" target="_blank" rel="noopener">
@@ -272,14 +272,14 @@ flexibility(document.documentElement);
 								</span>
 							</a>
 						</h4>
-						<p><b>Genre &ndash; </b>Political Drama, Intrigue<br><b>Description &ndash; </b>A tense, cold-blooded political drama following a wary government director and his subordinate as they try to make sense of an incident as they race to take control of the narrative.</p>
+						<p><b>Genre &ndash; </b>Political Drama, Intrigue<br><b>Description &ndash; </b>A tense, cold-blooded political drama following a wary government director and his subordinate as they try to make sense of an incident and race to take control of the narrative.</p>
 						<br>
 						<h4>
 							<span style="text-decoration: underline; color: #00ffff;">
 								<a style="color: #00ffff; text-decoration: underline;" href="../downloads/Insane AI/writing/zen_script_excerpt.pdf" target="_blank" rel="noopener">Zen</a>
 							</span>
 						</h4>
-						<p><b>Genre &ndash; </b>Mystery, fantasy<br><b>Description &ndash;&nbsp;</b>This two-part cutscene, establishes character dynamics between the emotionally strained Surveyor and SAI 0525.</p>
+						<p><b>Genre &ndash; </b>Mystery, fantasy<br><b>Description &ndash;&nbsp;</b>This two-part cutscene establishes character dynamics between the emotionally strained Surveyor and the companion AI - SAI 0525.</p>
 						<p><strong>Project</strong> &ndash; <span style="color: #00ffff;"><a style="color: #00ffff;" href="../home/ar-mobile-game/index.html" target="_blank" rel="noopener">Interactive Fitness Game</a></span></p>
 						<h4>
 							<br>
