--- a/home/the-guernica-engine/index.html
+++ b/home/the-guernica-engine/index.html
@@ -9470,7 +9470,7 @@ document.querySelectorAll('.narrative-toggle').forEach(function(toggle) {
                             >
                               <div class="elementor-widget-container">
                                 <p>
-                                  After finishing all the prep work, I executed
+                                  After finishing all the prep work, I -executed
                                   the story and created multiple drafts of the
                                   game prototype using, <strong> <span style="color: #ffffff"
                                       >twine and articy
